added workflows directory and moved yml file

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,7 +3,7 @@ name: Continuous Deployment
 on:
   push:
     branches:
-      - "main"
+      - "master"
 jobs:
   push_to_registry:
     name: Deploying Docker Image to Container Registry
