--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,7 +3,7 @@ name: Continuous Deployment
 on:
   push:
     branches:
-      - "master"
+      - "main"
 jobs:
   push_to_registry:
     name: Deploying Docker Image to Container Registry
