--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,17 +14,19 @@ jobs:
       # Good to do after any file mutations to make sure the docker build is using the most up-to-date version of repo
       - name: Pull Latest Code From Github Repo
         uses: actions/checkout@v4
-        
-      # Set up Java environment (optional, specify version if needed)
+
+      # Set up Java environment
       - name: Set up JDK
         uses: actions/setup-java@v3
         with:
-          java-version: '17' # Specify your Java version
-
-      # Run Maven clean install in the backend directory
-      - name: Build Backend with Maven
+          java-version: '17'
         working-directory: ./backend
-        run: mvn clean install
+        run: mvn clean install 
+
+      # # Run Maven clean install in the backend directory
+      # - name: Build Backend with Maven
+      #   working-directory: ./backend
+      #   run: mvn clean install
 
       - name: Set up Buildx environment
         uses: docker/setup-buildx-action@v3
