--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -15,12 +15,12 @@ jobs:
       - name: Pull Latest Code From Github Repo
         uses: actions/checkout@v4
 
-      # Set up Java environment
-      - name: Set up JDK
-        uses: actions/setup-java@v4
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
         with:
-          distribution: 'zulu
-          java-version: '17' 
+        distribution: 'temurin' 
+        java-version: '21'
 
       # Run Maven clean install in the backend directory
       - name: Build Backend with Maven
