--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,7 +8,19 @@ jobs:
   push_to_registry:
     name: Deploying Docker Image to Container Registry
     runs-on: ubuntu-latest
-    
+    services:
+      mysql:
+        image: mysql:5.7
+        env:
+          MYSQL_ROOT_PASSWORD: root
+          MYSQL_DATABASE: MyCookBook
+        ports:
+          - 3306:3306
+        options: >-
+          --health-cmd "mysqladmin ping --silent"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 3
     steps:
       # resource: https://github.com/actions/checkout
       # Good to do after any file mutations to make sure the docker build is using the most up-to-date version of repo
