--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -36,7 +36,7 @@ jobs:
       # Run Maven clean install in the backend directory
       - name: Build Backend with Maven
         working-directory: ./backend
-        run: mvn clean install -DskipTests
+        run: mvn clean install
 
       - name: Set up Buildx environment
         uses: docker/setup-buildx-action@v3
