--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -26,7 +26,7 @@ jobs:
       # Good to do after any file mutations to make sure the docker build is using the most up-to-date version of repo
       - name: Pull Latest Code From Github Repo
         uses: actions/checkout@v4
-
+      # resource: https://github.com/actions/setup-java 
       - name: Set Up JDK
         uses: actions/setup-java@v4
         with:
@@ -40,6 +40,7 @@ jobs:
 
       - name: Set up Buildx environment
         uses: docker/setup-buildx-action@v3
+
       # resource: https://github.com/docker/login-action?tab=readme-ov-file
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -57,6 +58,7 @@ jobs:
           push: false
           tags: mylee2002/my-cookbook:frontend-latest
           load: true
+          
       # Build Backend docker image
       - name: Build Backend
         id: build-backend
