--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,7 +14,8 @@ jobs:
         env:
           MYSQL_ROOT_PASSWORD: Keyboard123!
           MYSQL_DATABASE: MyCookBook
-        ports: 3306:3306
+        ports: 
+          - 3306:3306
     steps:
       # resource: https://github.com/actions/checkout
       # Good to do after any file mutations to make sure the docker build is using the most up-to-date version of repo
